--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,12 @@ dependencies:
   charts_flutter: ^0.9.0
   flutter_local_notifications: ^1.4.2
   rxdart: ^0.23.1
+  shared_preferences: ^2.0.6
 
   flutter:
     sdk: flutter
 
-
+#^0.16.1 auth
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
