--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,20 +15,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
  
 dependencies: 
-  flutter_calendar_carousel: ^1.4.12
-  firebase_auth: ^0.16.1
-  firebase_database: ^3.1.6
-  cloud_firestore: ^0.13.6
-  charts_flutter: ^0.9.0
-  flutter_local_notifications: ^1.4.2
+  flutter_calendar_carousel: ^2.0.1
+  firebase_auth: ^2.0.0
+  cloud_firestore: ^2.3.0
+  charts_flutter: ^0.11.0
+  flutter_local_notifications: ^6.0.0
   rxdart: ^0.23.1
   shared_preferences: ^2.0.6
+  in_app_purchase: ^1.0.6
+#firebase_database: ^3.1.6
 
   flutter:
     sdk: flutter
