--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
  
 dependencies: 
   flutter_calendar_carousel: ^2.0.1
+  firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   charts_flutter: ^0.11.0
