--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   rxdart: ^0.23.1
   shared_preferences: ^2.0.6
   in_app_purchase: ^1.0.6
+  provider: ^5.0.0
 #firebase_database: ^3.1.6
 
   flutter:
