--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^2.0.6
   in_app_purchase: ^1.0.6
   provider: ^5.0.0
+  cloud_functions: ^2.0.0
 #firebase_database: ^3.1.6
 
   flutter:
